@@ -34,12 +34,6 @@ namespace FluentValidation {
 		public CascadeMode CascadeMode { get; set; }
 
 		/// <summary>
-		/// Function that will be invoked if any of the validators associated with this rule fail.
-		/// </summary>
-		[Obsolete("OnFailure callbacks are deprecated and will be removed in FluentValidation 11. Please use a custom validator instead.")]
-		public Action<T, IEnumerable<ValidationFailure>> OnFailure { get; set; }
-
-		/// <summary>
 		/// Sets the display name for the property.
 		/// </summary>
 		/// <param name="name">The property's display name</param>
