@@ -92,12 +92,6 @@ namespace FluentValidation.Internal {
 		public string[] RuleSets { get; set; }
 
 		/// <summary>
-		/// Function that will be invoked if any of the validators associated with this rule fail.
-		/// </summary>
-		[Obsolete("OnFailure callbacks are deprecated and will be removed in FluentValidation 11. Please use a custom validator instead.")]
-		public Action<T, IEnumerable<ValidationFailure>> OnFailure { get; set; }
-
-		/// <summary>
 		/// The current rule component.
 		/// </summary>
 		public IRuleComponent<T, TValue> Current => _components.LastOrDefault();
