@@ -215,9 +215,6 @@ namespace FluentValidation.Internal {
 			_errorMessage = errorMessage;
 			_errorMessageFactory = null;
 		}
-
-		[Obsolete("OnFailure callbacks are deprecated and will be removed in FluentValidation 11. Please use a custom validator instead.")]
-		public Action<T, ValidationContext<T>, TProperty, string> OnFailure { get; set; }
 	}
 
 }
